Fixed pictures covering text

--- a/inlämning1/style.css
+++ b/inlämning1/style.css
@@ -28,8 +28,6 @@ body {
 }
 #pictureList img{
     width: 90%;
-    height: 90%;
-    object-fit: cover;
 }
 
 @media (max-width: 1200px)
